--- a/package.json
+++ b/package.json
@@ -21,11 +21,10 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "startr": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "start": "node index.js"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://prc.com"
+  "homepage": "https://fallintovoid.github.io/pari-react"
 }
